--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,180 +1,185 @@
+@import "mocha.css";
+
 * {
-  font-family: "Fira Code Medium", "Font Awesome 6 Brands", monospace;
-  font-size: 13px;
+  font-family: "FiraCode", "Font Awesome 6 Brands", monospace;
+  /* font-family: "FiraCode Nerd Font"; */
+  font-size: 12px;
+  min-height: 0;
 }
 
-window#waybar {
-  background-color: transparent;
-  color: #ffffff;
-  transition-property: background-color;
-  transition-duration: 0.5s;
+#waybar {
+  background: transparent;
+  color: @text;
 }
 
-#window,
+tooltip {
+  background-color: @surface0;
+  border-radius: 1rem;
+}
+
+tooltip label {
+  color: @text;
+}
+
 #workspaces {
-  margin: 0 4px;
+  border-radius: 1rem;
+  margin: 5px;
+  background-color: @surface0;
+  margin-left: 1rem;
 }
-
-window#waybar.empty {
-  background-color: transparent;
-}
-
-window#waybar.hidden {
-  opacity: 0.2;
-}
-
-window#waybar.solo {
-  background-color: #ffffff;
-}
-
-window#waybar.termite {
-  background-color: #3f3f3f;
-}
-
-window#waybar.chromium {
-  background-color: #000000;
-  border: none;
-}
-
-/* Modules */
-
-.modules-left {
-  border-radius: 50em;
-  padding: 0 10px;
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.modules-center {
-  border-radius: 50em;
-  background: rgba(0, 0, 0, 0.3);
-}
-
-.modules-right {
-  background: rgba(0, 0, 0, 0.3);
-  border-radius: 50em;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-  margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-  margin-right: 0;
-}
-
-/* Worskspaces */
 
 #workspaces button {
-  min-width: 20px;
-  padding: 0 5px;
-  margin: 2px;
-  background-color: transparent;
-  color: #ffffff;
-  border-radius: 50%;
-  transition: background-color 250ms linear;
+  color: @text;
+  border-radius: 1rem;
+  padding: 0.4rem;
+  background-color: @surface0;
 }
 
 #workspaces button:hover {
-  background: #64727d;
+  color: @sky;
 }
 
 #workspaces button.focused {
-  background-color: #64727d;
+  color: @sky;
 }
 
 #workspaces button.urgent {
-  background-color: #eb4d4b;
+  color: @red;
 }
 
-/* Buttons */
-
+#custom-music,
+#tray,
+#backlight,
 #clock,
 #battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
 #pulseaudio,
-#wireplumber,
-#custom-media,
-#tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#power-profiles-daemon,
-#mpd,
+#custom-lock,
+#custom-power,
 #language,
-#battery,
-#bluetooth,
-#custom-notification,
-#custom-powermenu {
-  padding: 0 10px;
-  color: #ffffff;
-  background-color: transparent;
-  border-radius: 50em;
-  transition: background-color 250ms linear;
+#idle_inhibitor,
+#power-profiles-daemon,
+#mode,
+#scratchpad,
+#network,
+#bluetooth {
+  padding: 0 1rem;
+  margin: 5px 0;
+  background-color: @surface0;
 }
 
-#clock:hover,
-#battery:hover,
-#cpu:hover,
-#memory:hover,
-#disk:hover,
-#temperature:hover,
-#backlight:hover,
-#network:hover,
-#pulseaudio:hover,
-#wireplumber:hover,
-#custom-media:hover,
 #tray:hover,
 #idle_inhibitor:hover,
-#scratchpad:hover,
 #power-profiles-daemon:hover,
-#mpd :hover,
-#language:hover,
-#bluetooth:hover,
-#custom-notification:hover,
-#custom-powermenu:hover {
-  background-color: #64727d;
+#pulseaudio:hover,
+#backlight:hover,
+#battery:hover,
+#custom-lock:hover,
+#custom-power:hover,
+#custom-music:hover,
+#network:hover,
+#bluetooth:hover {
+  background-color: @surface2;
 }
 
-#mode:hover {
-  background-color: transparent;
+#clock {
+  color: @blue;
+  border-radius: 1rem;
 }
 
-/* Scratchpad */
+#battery {
+  color: @green;
+  border-radius: 0 1rem 1rem 0;
+  margin-right: 5px;
+}
+
+#battery.charging {
+  color: @green;
+}
+
+#battery.warning:not(.charging) {
+  color: @red;
+}
+
+#backlight {
+  color: @yellow;
+}
+
+#pulseaudio {
+  color: @blue;
+  border-radius: 1rem 0px 0px 1rem;
+}
+
+#custom-music {
+  color: @mauve;
+  border-radius: 1rem;
+}
+
+#custom-lock {
+  border-radius: 1rem 0px 0px 1rem;
+  color: @lavender;
+}
+
+#custom-power {
+  margin-right: 1rem;
+  border-radius: 0px 1rem 1rem 0px;
+  color: @red;
+}
+
+#tray {
+  margin-right: 5px;
+  border-radius: 1rem;
+}
+
+#power-profiles-daemon {
+  border-radius: 0 1rem 1rem 0;
+  margin-right: 5px;
+}
+
+#power-profiles-daemon.performance {
+  color: @yellow;
+}
+
+#power-profiles-daemon.balanced {
+  color: @maroon;
+}
+
+#power-profiles-daemon.power-saver {
+  color: @green;
+}
+
+#idle_inhibitor {
+  border-radius: 1rem 0 0 1rem;
+}
+
+#idle_inhibitor.activated {
+  color: @green;
+}
+
+#idle_inhibitor.deactivated {
+  color: @red;
+}
+
+#language {
+  border-radius: 1rem;
+  margin-right: 5px;
+}
+
+#mode {
+  border-radius: 1rem;
+  margin-right: 5px;
+}
 
 #scratchpad {
-  background: rgba(0, 0, 0, 0.2);
+  border-radius: 1rem;
+  margin-right: 5px;
 }
 
-#scratchpad.empty {
-  background-color: transparent;
+#network {
+  margin-right: 5px;
+  border-radius: 1rem;
 }
 
-/* Privacy */
-
-#privacy {
-  padding: 0;
-}
-
-#privacy-item {
-  padding: 0 5px;
-  color: white;
-}
-
-#privacy-item.screenshare {
-  background-color: #cf5700;
-}
-
-#privacy-item.audio-in {
-  background-color: #1ca000;
-}
-
-#privacy-item.audio-out {
-  background-color: #0069d4;
+#bluetooth {
+  margin-right: 5px;
+  border-radius: 1rem;
 }
