--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -56,6 +56,7 @@ tooltip label {
 #pulseaudio,
 #custom-lock,
 #custom-power,
+#custom-night-light,
 #language,
 #idle_inhibitor,
 #power-profiles-daemon,
@@ -76,6 +77,7 @@ tooltip label {
 #battery:hover,
 #custom-lock:hover,
 #custom-power:hover,
+#custom-night-light:hover,
 #custom-music:hover,
 #network:hover,
 #bluetooth:hover {
