--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,9 +1,7 @@
 @import "mocha.css";
 
 * {
-  font-family: "JetBrainsMono Nerd Font", "FiraCode Nerd Font",
-    "Font Awesome 6 Brands", monospace;
-  /* font-family: "FiraCode Nerd Font"; */
+  font-family: "Cascadia Mono NF", monospace;
   font-size: 13px;
   min-height: 0;
 }
